# NamePronunciationApp

./: Dockerfile  README.md  config.ini  pyproject.toml  requirements.txt  run.py
docs/: API Documents for Hackathon.docx  Name Pronunciation App.pptx  Name_Pronunciation.docx
docs/speeches/: Aby.m4a  Andy.m4a  Bao.m4a  Jose.m4a  Julia.m4a  PaulJohn.m4a  Sanya.m4a
flask_app/: app.py  main.py  requirement.txt  storage.py
flask_app/audio/U854769/: voice.webm
flask_app/constant/: constant.py
flask_app/converter/: fetch_sppech.py  text_to_speech.py
flask_app/database/: db.py
flask_app/logger/: logger.py
flask_app/resource/database/: config.yml
flask_app/resource/log/: config.yaml
flask_app/routes/: api.py
flask_app/utilities/: utilities.py
react-app/: .gitignore  Dockerfile  README.md  package-lock.json  package.json
react-app-user/: Dockerfile  README.md  app_server.conf  container_server.conf
react-app-user/src/: index.jsx
react-app-user/src/app/: App.jsx  PronounciationWidget.jsx
react-app-user/src/fake-db/db/: auth.js
react-app/public/: index.html
react-app/src/: App.js  index.js
react-app/src/app/: App.jsx  navigations.js
react-app/src/app/auth/: AuthGuard.jsx
react-app/src/app/components/Brand/: Brand.jsx
react-app/src/app/components/ChatHead/: ChatHead.jsx
react-app/src/app/components/Footer/: Footer.jsx
react-app/src/app/components/MatxLayout/: MatxLayout.jsx
react-app/src/app/contexts/: JWTAuthContext.js
react-app/src/app/routes/: routes.jsx
react-app/src/fake-db/: index.js
react-app/src/fake-db/db/: employee.js
(+63 files in other folders)
