[tool.poetry]
name = "namepronunciationapp"
version = "0.1.0"
description = "Pronunciation of various names"
authors = ["Hexadecimal Team"]
packages = [
    {include = "flask_app"}
]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
Flask-Login = "^0.6.1"
okta-jwt-verifier = "^0.2.3"
requests = "^2.27.1"
Flask-Cors = "^3.0.10"
psycopg2 = "^2.8.4"
sqlalchemy = "^1.3.13"
WSGIserver = "^1.3"
objdict = "^0.4.4"
gTTS = "^2.2.4"
SpeechRecognition = "^3.8.1"
mpg123 = "^0.4"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylint = "^2.13.9"
pytest = "^7.1.2"
autoflake = "^1.4"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
